# cubek

./: Cargo.toml
benchmarks/: Cargo.toml
benchmarks/benches/: interpolate.rs
benchmarks/src/: lib.rs  registry.rs
benchmarks/src/attention/: problem.rs
benchmarks/src/interpolate/: benchmark.rs  correctness.rs  mod.rs  problem.rs  strategy.rs
crates/cubek/: Cargo.toml
crates/cubek-convolution/tests/suite/: launcher_strategy.rs
crates/cubek-fft/src/fft/: cfft.rs  irfft.rs  limits.rs  mod.rs  rfft.rs
crates/cubek-fft/tests/fft/: cfft.rs  mod.rs
crates/cubek-interpolate/: Cargo.toml
crates/cubek-interpolate/src/: error.rs  lib.rs
crates/cubek-interpolate/src/components/: mod.rs
crates/cubek-interpolate/src/definition/: base.rs  mod.rs
crates/cubek-interpolate/src/kernel/: mod.rs
crates/cubek-interpolate/src/launch/: base.rs
crates/cubek-interpolate/src/modes/: bicubic.rs  bilinear.rs  lanczos3.rs  mod.rs  (+1 more)
crates/cubek-matmul/: Cargo.toml
crates/cubek-quant/src/: dequantize_tiled.rs
crates/cubek-resample/: Cargo.toml
crates/cubek-resample/src/: lib.rs
crates/cubek-resample/src/components/: base.rs  mod.rs  resample_instruction.rs  tap_resolver.rs
crates/cubek-resample/src/definition/: base.rs  kernel.rs  mod.rs  placement.rs  semiring.rs
crates/cubek-resample/src/launch/: base.rs
crates/cubek-resample/tests/: lib.rs
crates/cubek-resample/tests/resample/: base.rs  mod.rs  resample.rs
crates/cubek-test-utils/src/: tile_input.rs
crates/cubek-tile/src/: lib.rs  matmul.rs  matrix.rs  ring.rs  tile.rs
crates/cubek/src/: lib.rs
(+73 files in other folders)
